--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,3 +20,15 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.disable-global h1,h2,h3,h4,h5,h6 {
+  font-size: revert;
+}
+
+.drop-indicator {
+  @apply bg-sky-500 h-1 w-full
+}
+
+.drop-indicator * {
+  @apply invisible
+}
